--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,4 +17,32 @@ jobs:
 
     - name: CMake Build
       run: ./configure.sh
+  
+  release:
+    needs: build
+    runs-on: ubuntu-latest
 
+    steps:
+    - name: Checkout code
+        uses: actions/checkout@v4
+
+    - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+        GITHUB_TOKEN: ${{ secrets.GHCR_PAT }}
+        with:
+        tag_name: ${{ github.sha }}
+        release_name: Release ${{ github.sha }}
+        draft: false
+        prerelease: false
+
+    - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+        GITHUB_TOKEN: ${{ secrets.GHCR_PAT }}
+        with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ${{github.workspace}}/build/gateway-app
+        asset_name: gateway-app
+        asset_content_type: application/octet-stream
